--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -89,6 +89,11 @@
   h1, h2, h3, h4, h5, h6 {
     font-family: 'Vrau Loux', ui-serif, Georgia, serif !important;
   }
+
+  .cv-auto {
+    content-visibility: auto;
+    contain-intrinsic-size: 1px 800px;
+  }
 }
 
 @layer components {
